# doosan-e0509-assignment

./: readme.md  requirements.txt  start.sh  stop.sh
src/my_ros2_assignment/: package.xml  setup.py
src/my_ros2_assignment/my_ros2_assignment/: assignment_gui.py  assignment_status_node.py  assignment_status_node.py.save  gui_main.py  movegroup_client_min.py  movegroup_client_xyz.py  movegroup_sequence.py  my_node.py  ros_backend.py  stop_client.py  workers.py
src/my_ros2_assignment_msgs/: CMakeLists.txt  package.xml
src/my_ros2_assignment_msgs/msg/: AssignmentStatus.msg.save
